--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -52,27 +52,35 @@ run {
 }
 
 jar {
-// sets the name of the .jar file this produces to the name of the game or app, with the version after.
+  // name of the JAR
   archiveFileName.set("${appName}-${projectVersion}.jar")
-// the duplicatesStrategy matters starting in Gradle 7.0; this setting works.
   duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+
+  // include all runtime dependencies (fat JAR)
   dependsOn configurations.runtimeClasspath
   from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-// these "exclude" lines remove some unnecessary duplicate files in the output JAR.
+
+  from(rootProject.file('assets')) {
+      // put files at the root of the JAR so "drytilleddirt.png" still works
+      into ''
+  }
+
+  // remove duplicate META-INF stuff
   exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA')
   dependencies {
     exclude('META-INF/INDEX.LIST', 'META-INF/maven/**')
   }
-// setting the manifest makes the JAR runnable.
-// enabling native access helps avoid a warning when Java 24 or later runs the JAR.
+
+  // runnable manifest
   manifest {
     attributes 'Main-Class': project.mainClassName, 'Enable-Native-Access': 'ALL-UNNAMED'
   }
-// this last step may help on some OSes that need extra instruction to make runnable JARs.
+
   doLast {
     file(archiveFile).setExecutable(true, false)
   }
 }
+
 
 // Builds a JAR that only includes the files needed to run on macOS, not Windows or Linux.
 // The file size for a Mac-only JAR is about 7MB smaller than a cross-platform JAR.
